# SAR-LoRA-DINO

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
assets/: README.md
checkpoints/: README.md
data/: README.md
docs/: ARTIFACTS_AND_RELEASES.md  CONFIGS_EXPLAINED.md  CONVENTIONS.md  DATASET.md  DATASET_SARDET100K.md  EVALUATION.md  EXPORT.md  FAQ.md  GETTING_STARTED.md  INSTALL.md  INSTALLATION.md  LORA_DESIGN.md  MODEL_ZOO.md  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  REPRODUCE.md  RESULTS_BUNDLE.md  TRAINING.md
mmdet_toolkit/: .gitignore  README.md  install.sh  requirements.txt  setup.py
scripts/: README.md  build_release_bundle.py  check_artifacts.py  check_release_assets.py  count_trainable_params.py  download_pretrained.sh  export_experiment_results.py  make_coco_subset.py  materialize_metrics_jsons_from_results_tsv.py  mmdet_train.py  package_metrics_jsons.py  pick_best_checkpoint.py  prepare_sardet100k.sh  run_sardet_full_cfg.sh  run_sardet_smoke.sh  run_sardet_smoke_cfg.sh  setup_env.sh  setup_sardet_dataset.sh  verify_env.sh
tools/: infer.sh  test.sh  test_to_json.py  train.sh
visualization/: README.md  export_gradcam_sample500_bundle.py  export_sardet_vr.sh  export_vr_sample500_lora_bundle.py  mmdet_gradcam_export.py  mmdet_test_export.py  repack_vr_sample500_from_subset.py  run_fullsplit_vr_pack.py  visualize_sardet.sh
(+119 files in other folders)
